--- a/app/views/display/tv.html.erb
+++ b/app/views/display/tv.html.erb
@@ -16,4 +16,9 @@
     <div id="page2" class="page viewportheight">
     </div>
 
+    <div id="page3" class="page viewportheight">
+        <div id="chart-usx" data-min="" data-max="" data-color:"#43FF07" data-x-format="D.M.">
+        </div>        
+    </div>
+
 </div>
