--- a/app/assets/stylesheets/local.css.erb
+++ b/app/assets/stylesheets/local.css.erb
@@ -355,6 +355,14 @@ span.scroll-highlight {
 	line-height: 10vh;
 }
 
+#tv #chart-usx {
+	width:80vw;
+	height:60vh;
+	margin:auto;
+	position:relative;
+	top:5vh;
+}
+
 /**** HANDELSINTERFACE ****/
 
 #handelsinterface {
