--- a/app/assets/stylesheets/local.css.erb
+++ b/app/assets/stylesheets/local.css.erb
@@ -281,7 +281,10 @@ span.scroll-highlight {
 	font-family: 'ProximaNovaLight';
 }
 
-.stock-mini h5 {
+.stock-mini h5.symbol {
+	font-size: 105%;
+	text-decoration: underline;
+	padding-bottom: 0.2em;
 }
 
 .top_stocks h4 {
